src/tests/snapshots/niri__tests__window_opening__check_target_size@omT.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true"
expression: snapshot
---
initial configure:
size: 1248 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 1248 × 688, bounds: 1248 × 688, states: [Activated]
